# libscreencapture-wayland

./: .gitmodules  BlockingRingbuffer.hpp  CMakeLists.txt  FFmpegOutput.cpp  FFmpegOutput.hpp  GstOutput.cpp  GstOutput.hpp  Muxer.cpp  Muxer.hpp  PipeWireStream.cpp  PipeWireStream.hpp  README.md  ThreadedWrapper.hpp  ThreadedWrapper.inc  VAAPIEncoder.cpp  VAAPIEncoder.hpp  VAAPIScaler.cpp  VAAPIScaler.hpp  common.cpp  common.hpp  libavcommon.hpp  libavoutput.cpp  main.cpp  xdg-desktop-portal.cpp  xdg-desktop-portal.h  xdg-desktop-portal.hpp
FFMPEGModule/: CMakeLists.txt  FFmpegOutput.cpp  FFmpegOutput.hpp  Muxer.cpp  Muxer.hpp  ThreadedWrapper.hpp  ThreadedWrapper.inc  VAAPIEncoder.cpp  VAAPIEncoder.hpp  VAAPIScaler.cpp  VAAPIScaler.hpp  libavcommon.hpp
GStreamerModule/: CMakeLists.txt  GstOutput.cpp  GstOutput.hpp
PipeWireModule/: CMakeLists.txt  PipeWireStream.cpp  PipeWireStream.hpp
PortalModule/: CMakeLists.txt  xdg-desktop-portal.cpp  xdg-desktop-portal.hpp
cmake/: BuildFFmpeg.cmake
include/: c_common.h  module-pipewire.h  module-portal.h
